Replaced servicegateway docker image registry location in docker composer file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     restart: always
 
   sg:
-    image: docker-registry.crim.ca/vesta/sg:latest
+    image: vestaservices/servicegateway:latest
     links:
       - amqp
     ports:
